trying to fix the dropdown menu on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -133,6 +133,10 @@ body{
  	background: none;
  }
 
+ ul.right.logged_in{
+ 	margin-right: 0em;
+ }
+
  a.right.logged_in{
  	margin-right: 1px;
  }
