--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -4,6 +4,10 @@
 
 // Log-in Page banner
 
+li.has-dropdown{
+  margin-right: 1em;
+}
+
 .large-12.columns#posts_container{
   width: 100%;
   margin-left: 10%;
